[package]
name = "tic-tac-toe"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.8.0",  features = ["dynamic"] }
kayak_ui = { git="https://github.com/StarArawn/kayak_ui", rev="9fbb25774b2ddac5c2194f502a8127c16d36568e", features = ["bevy_renderer"] }
bevy_pixel_camera = "0.2.0"